partners spacing and filter fixed

--- a/styles/collapse.module.css
+++ b/styles/collapse.module.css
@@ -4,8 +4,8 @@
   margin-bottom: 12px;
   cursor: pointer;
   background: #18141B;
-  margin-left: 15px;
-  margin-right: 15px;
+  /* margin-left: 15px;
+  margin-right: 15px; */
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
